e2e/tests/all/snapshots/tree-open_open_desktop.snap
---
source: e2e/src/suite.rs
description: tree-open at desktop (open)
expression: tree
---
tree "Project files" [orientation=vertical]
  treeitem "src" [expanded] [level=1] [selected=false]
    button "src"
      StaticText "src"
    group
      treeitem "lib.rs" [level=2] [selected=false]
        button "lib.rs"
          StaticText "lib.rs"
      treeitem "main.rs" [level=2] [selected=false]
        button "main.rs"
          StaticText "main.rs"
  treeitem "docs" [expanded=false] [level=1] [selected=false]
    button "docs"
      StaticText "docs"
  treeitem "README.md" [level=1] [selected=false]
    button "README.md"
      StaticText "README.md"
