e2e/tests/all/snapshots/tree_rest_mobile.snap
---
source: e2e/src/suite.rs
description: tree at mobile (rest)
expression: tree
---
tree "Project files" [orientation=vertical]
  treeitem "src" [expanded=false] [level=1] [selected=false]
    button "src"
      StaticText "src"
  treeitem "docs" [expanded=false] [level=1] [selected=false]
    button "docs"
      StaticText "docs"
  treeitem "README.md" [level=1] [selected=false]
    button "README.md"
      StaticText "README.md"
