e2e/tests/all/snapshots/typography_quotes_rest_desktop.snap
---
source: e2e/src/suite.rs
description: typography_quotes at desktop (rest)
expression: tree
---
generic
  figure
    blockquote
      StaticText "A primary quote."
    Figcaption
      StaticText "Speaker"
  figure
    blockquote
      StaticText "A secondary quote."
    Figcaption
      StaticText "Speaker"
  figure
    blockquote
      StaticText "A error quote."
    Figcaption
      StaticText "Speaker"
  figure
    blockquote
      StaticText "A info quote."
    Figcaption
      StaticText "Speaker"
  figure
    blockquote
      StaticText "A success quote."
    Figcaption
      StaticText "Speaker"
  figure
    blockquote
      StaticText "A warning quote."
    Figcaption
      StaticText "Speaker"
  figure
    blockquote
      StaticText "A navy quote."
  figure
    blockquote
      StaticText "A yellow quote."
  figure
    blockquote
      StaticText "A info.6 quote."
  figure
    blockquote
      StaticText "A error.8 quote."
