e2e/tests/all/snapshots/typography_quotes_rest_mobile.snap
---
source: e2e/src/suite.rs
description: typography_quotes at mobile (rest)
expression: tree
---
figure
  blockquote
    StaticText "A primary quote."
  Figcaption
    StaticText "Speaker"
figure
  blockquote
    StaticText "A secondary quote."
  Figcaption
    StaticText "Speaker"
figure
  blockquote
    StaticText "A error quote."
  Figcaption
    StaticText "Speaker"
figure
  blockquote
    StaticText "A info quote."
  Figcaption
    StaticText "Speaker"
figure
  blockquote
    StaticText "A success quote."
  Figcaption
    StaticText "Speaker"
figure
  blockquote
    StaticText "A warning quote."
  Figcaption
    StaticText "Speaker"
blockquote
  StaticText "A navy quote."
blockquote
  StaticText "A yellow quote."
blockquote
  StaticText "A info.6 quote."
blockquote
  StaticText "A error.8 quote."
figure
  blockquote
    StaticText "A quote with a"
    link "link"
      StaticText "link"
    StaticText "and a linked attribution."
  Figcaption
    link "Albert Einstein"
      StaticText "Albert Einstein"
blockquote
  StaticText "A navy quote."
